syntax = "proto3";

package calculator;

option go_package = "github.com/markraiter/grpc/calculator/proto";

message SumRequest {
    int32 first_digit = 1;
    int32 second_digit = 2;
}

message SumResponse {
    int32 result = 1;
}